samples/_failures_safe/1761611857_6ec64b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f92199fc.c: In function ‘main’:
./samples/SAFE/__tmp_f92199fc.c:139:16: error: missing terminating " character
  139 |         printf("Error
      |                ^~~~~~
./samples/SAFE/__tmp_f92199fc.c:139:9: error: expected expression at end of input
  139 |         printf("Error
      |         ^~~~~~
./samples/SAFE/__tmp_f92199fc.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f92199fc.c:139:9: error: expected declaration or statement at end of input
